After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737761 - aacparse: memory leak when converting to adts
aacparse: memory leak when converting to adts
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.4.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-02 01:28 UTC by Matej Knopp
Modified: 2014-10-14 07:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (872 bytes, patch)
2014-10-02 01:28 UTC, Matej Knopp
committed Details | Review

Description Matej Knopp 2014-10-02 01:28:49 UTC
Created attachment 287560 [details] [review]
Patch

gst_aac_parse_prepend_adts_headers doesn't specify GDestroyNotify when creating wrapped memory
Comment 1 Sebastian Dröge (slomo) 2014-10-02 07:41:49 UTC
commit e1d275cfec4c1caae7885857ce4ec35bade01dd6
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Thu Oct 2 03:26:22 2014 +0200

    aacparse: fix memory leak when prepending ADTS headers
    
    https://bugzilla.gnome.org/show_bug.cgi?id=737761