aacparse: fix memory leak when prepending ADTS headers

https://bugzilla.gnome.org/show_bug.cgi?id=737761